--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -43,7 +43,7 @@ button{
     font-weight: bold;
     cursor: pointer;
     font-size: 15px;
-    border-radius: 15px;
+    border-radius: 10px;
     border: none;
 }
 .title-login{
@@ -51,4 +51,20 @@ button{
     font-size: 70px;
     padding: 0;
     margin: 0;
+}
+.google-login{
+    background-color: #3f4755;
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.google-login img{
+    width: 15px;
+    margin: auto 5px;
+}
+.google-login:hover{
+    opacity: 80%;
 }
