--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -20,13 +20,13 @@
     background-color: rgba(0,0,0,0.7);
     display: flex;
 }
-.container{
+.container-login{
    margin: auto;
    width: 300px;
    /* background: blue; */
    color: white;
 }
-.input-info{
+.input-info-login{
     display: flex;
     flex-direction: column;
     margin:10px 0 10px 0 
