--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,54 @@
-.App {
-  text-align: center;
+:root {
+    --primary-color: #E20E86;
+    --heading-color: #1b448e;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        'Roboto',
+        'Oxygen',
+        'Ubuntu',
+        'Cantarell',
+        'Fira Sans',
+        'Droid Sans',
+        'Muli',
+        'Helvetica Neue',
+        sans-serif;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+@import url('./grid.css');
+
+
+.hover-effect:hover {
+    background-color: #F1F1F1;
+}
+
+.hover-effect-transition {
+    transition: transform linear 0.2s;
+}
+
+.hover-effect-transition:hover {
+    transform: translateX(5px);
+}
+
+.hover-effect-color:hover {
+    color: var(--primary-color);
 }
