--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,119 @@
-h1{
-    color: red;
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
+}
+
+.header__logo-text {
+    font-size: 32px;
+    color: #000000;
+}
+
+.nav__list {
+    display: flex;
+    align-items: center;
+    margin: 0 -12px;
+}
+
+.nav__item {
+    display: block;
+    cursor: pointer;
+}
+
+.nav__item.hover-effect {
+    transition: transform linear 0.2s;
+
+}
+
+.nav__item.hover-effect:hover {
+    transform: translateX(4px);
+}
+
+.nav__item-link {
+    padding: 8px 12px;
+    display: block;
+}
+
+.nav__item-link,
+.nav__item-user span {
+    font-size: 16px;
+    color: #555555;
+    font-weight: 700;
+
+}
+
+.nav__item-user {
+    display: flex;
+    align-items: center;
+    margin: 0 -2px;
+    padding: 8px 12px;
+}
+
+.nav__item-user * {
+    margin: 0 2px;
+}
+
+.nav__item-user img {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+}
+
+.nav__item-with-sub {
+    position: relative;
+}
+
+.nav__item-with-sub::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 12px;
+    top: 100%;
+    right: 0;
+    display: visible;
+    position: absolute;
+}
+
+.nav__item-with-sub:hover .nav__item-sub {
+    z-index: 3;
+    display: block;
+}
+
+.nav__item-sub {
+    display: none;
+    position: absolute;
+    min-width: 100%;
+    width: max-content;
+    top: calc(100% + 12px);
+    right: 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    background: #ffffff;
+}
+
+.nav__item-sub-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.nav__item-sub-item-link {
+    font-size: 16px;
+    line-height: 22px;
+    color: #555555;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    padding: 12px;
+    transition: padding linear 0.2s;
+}
+
+.nav__item-sub-item.hover-effect:hover .nav__item-sub-item-link {
+    padding-left: 16px;
+    padding-right: 8px;
+}
+
+.nav__item-sub-item svg {
+    font-size: 22px;
+    margin-right: 8px;
 }
