--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shizuru&display=swap');
 
 .login-container {
-    background-image: url('https://res.cloudinary.com/dhz4hr8dq/image/upload/v1646057822/background/giau-tran-ZMdXvd6jGww-unsplash_fnhmql.jpg'); 
+    background-image: url('https://res.cloudinary.com/dhz4hr8dq/image/upload/v1646057822/background/giau-tran-ZMdXvd6jGww-unsplash_fnhmql.jpg');
     background-repeat: no-repeat, repeat;
     background-size: cover;
     position: fixed;
@@ -9,35 +9,40 @@
     left: 0;
     right: 0;
     bottom: 0;
-    text-align: center; 
+    text-align: center;
 }
-.background-login{
+
+.background-login {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
 }
-.container-login{
-   margin: auto;
-   width: 300px;
-   /* background: blue; */
-   color: white;
+
+.container-login {
+    margin: auto;
+    width: 300px;
+    /* background: blue; */
+    color: white;
 }
-.input-info-login{
+
+.input-info-login {
     display: flex;
     flex-direction: column;
-    margin:10px 0 10px 0 
+    margin: 10px 0 10px 0
 }
-a{
+
+.login-container a {
     color: #2B6CB0;
     margin: 10px;
     text-decoration: none;
 }
-button{
-    background-color:#04C35C ;
+
+.login-container button {
+    background-color: #04C35C;
     color: white;
     padding: 15px;
     font-weight: bold;
@@ -46,13 +51,15 @@ button{
     border-radius: 10px;
     border: none;
 }
-.title-login{
+
+.title-login {
     font-family: 'Shizuru', cursive;
     font-size: 70px;
     padding: 0;
     margin: 0;
 }
-.google-login{
+
+.google-login {
     background-color: #3f4755;
     color: black;
     font-weight: bold;
@@ -61,10 +68,12 @@ button{
     display: flex;
     justify-content: center;
 }
-.google-login img{
+
+.google-login img {
     width: 15px;
     margin: auto 5px;
 }
-.google-login:hover{
+
+.google-login:hover {
     opacity: 80%;
 }
