--- a/src/components/loading/loading-page.css
+++ b/src/components/loading/loading-page.css
@@ -1,6 +1,8 @@
 .loading-page {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 300px;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
